--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <!-- 1. 头部固定 -->
+    <!-- 1. 头部固定 text-->
     <header>
         <div class="top">
             <div class="left">
